--- a/cadettracker/templates/cadettracker/index.html
+++ b/cadettracker/templates/cadettracker/index.html
@@ -1,13 +1,13 @@
-<h2>Cadet List</h2>
+<h2>Company List</h2>
 
-{% if cadets %} <!-- check if list is full or empty -->
+{% if Companys %} <!-- check if list is full or empty -->
 <ul>
 
-  {% for cadet in cadets %}
-      <li><a href="./{{cadet.id}}">{{cadet.name}}</a> {{cadet.company}}</li>
+  {% for Company in Companys %}
+      <li><a href="./{{Company.Company_id}}">{{Company.CompanyName}}</a> {{Company.CompanyName}}</li>
   {% endfor %}
 
 </ul>
 {% else %}
-<p>No cadets in database</p>
+<p>No Companies in database</p>
 {% endif %}
