issues with companyhas supplies
can't get companyhassupplies

--- a/cadettracker/templates/cadettracker/company.html
+++ b/cadettracker/templates/cadettracker/company.html
@@ -1,15 +1,16 @@
 <h2>Item list</h2>
 
-{% if items %}
+{% if supplies %}
 <ul>
  
-  {% for item in items %}
+  
+{% for item in supplies %}
     
-    <li>{{ Supply.item ))</li>
-  {% endfor %}
+  <li>{{ CompanyHasSupply.Item ))</li>
+{% endfor %}
 
 </ul>
 {% else %}
-<p>No supplies in database</p>
+<p>No suppliessssssss in database</p>
 {% endif %}
 
