supply list kinda working
kinda working

--- a/cadettracker/templates/cadettracker/company.html
+++ b/cadettracker/templates/cadettracker/company.html
@@ -1,13 +1,15 @@
 <h2>Item list</h2>
 
-{% if supplies %}
+{% if Supply_List %}
 <ul>
  
   
-{% for item in supplies %}
+{% for item in Supply_List %}
     
-  <li>{{ CompanyHasSupply.Item ))</li>
+  <li>{{ CompanyHasSupply}} </li>
 {% endfor %}
+  
+
 
 </ul>
 {% else %}
