--- a/cadettracker/templates/cadettracker/company.html
+++ b/cadettracker/templates/cadettracker/company.html
@@ -3,13 +3,15 @@
 {{ Co.CompanyName }} {{ Co.regiment }}
 {% if Co %}
 <ul>
- 
-  
+
+
 {% for item in Co.companyhassupply_set.all %}
   <li>{{ item }} </li>
 
+<a class = "drowpdown-item" href="{% url 'cadettracker:modifysupplies' %}">Modify supplies</a>
+
 {% endfor %}
-  
+
 
 
 </ul>
