--- a/cadettracker/templates/cadettracker/company.html
+++ b/cadettracker/templates/cadettracker/company.html
@@ -8,7 +8,7 @@
 {% for item in Co.companyhassupply_set.all %}
   <li>{{ item }} </li>
 
-<a class = "drowpdown-item" href="{% url 'cadettracker:modifysupplies' %}">Modify supplies</a>
+<a class = "drowpdown-item" href="{% url 'cadettracker:modifysupplies' Co.pk %}">Modify supplies</a>
 
 {% endfor %}
 
