--- a/cadettracker/templates/cadettracker/modify.html
+++ b/cadettracker/templates/cadettracker/modify.html
@@ -1,4 +1,4 @@
-<form action = 'modify' method = 'post'>
+<form method = 'post'>
     {% csrf_token %}
     {% for field in form %}
     <div class = 'row'>
@@ -9,6 +9,7 @@
         {{ field }}
     </div>
     {% endfor %}
-
+    </div>
     <input type = 'submit' value = 'Submit' />
 </form>
+
