--- a/cadettracker/templates/cadettracker/regiment.html
+++ b/cadettracker/templates/cadettracker/regiment.html
@@ -17,7 +17,7 @@ Regiment: {{ regi.RegNum }}
 
   {% for item in co.companyneedssupply_set.all %}
     <li>{{ item }}</li>
-  <li><a href="{% url 'fulfillRequest' item.id %}"> Fulfill Request</a></li>
+  <a class = "drowpdown-item" href="{% url 'cadettracker:fulfillRequest' item.id %}">Fulfill Request</a>
   {% endfor %}
 
 {% endfor %}
