--- a/cadettracker/templates/cadettracker/modify.html
+++ b/cadettracker/templates/cadettracker/modify.html
@@ -1,3 +1,7 @@
+{% extends 'cadettracker/base_generic.html' %}
+
+{% block company_content %}
+
 <form method = 'post'>
     {% csrf_token %}
     {% for field in form %}
@@ -13,3 +17,4 @@
     <input type = 'submit' value = 'Submit' />
 </form>
 
+{% endblock %}
