--- a/cadettracker/templates/cadettracker/regiment.html
+++ b/cadettracker/templates/cadettracker/regiment.html
@@ -17,7 +17,15 @@ Regiment: {{ regi.RegNum }}
 
   {% for item in co.companyneedssupply_set.all %}
     <li>{{ item }}</li>
-  <a class = "drowpdown-item" href="{% url 'cadettracker:fulfillRequest' item.id %}">Fulfill Request</a>
+
+  <form method = 'post'>
+    {% csrf_token %}
+    <div class = 'row'>
+      <a class = "drowpdown-item" href="{% url 'cadettracker:fulFillRequest' item.id %}">Fulfill Request</a>
+    <input type = 'submit' value = 'Submit' />
+    </div>
+</form>
+
   {% endfor %}
 
 {% endfor %}
