--- a/cadettracker/templates/cadettracker/modify.html
+++ b/cadettracker/templates/cadettracker/modify.html
@@ -2,6 +2,13 @@
 
 {% block company_content %}
 
+<div style="text-align:center;">
+  <p> When modifying the number available, use a negative number to subtract from the current total </p>
+  <p> Can't find a new item? Please send up the CoC to have new items added </p>
+  <p> </p
+    <p> </p
+</div>
+
 <form method = 'post'>
     {% csrf_token %}
     {% for field in form %}
@@ -14,7 +21,11 @@
     </div>
     {% endfor %}
     </div>
+
+    <div></div>
     <input type = 'submit' value = 'Submit' />
 </form>
+
+
 
 {% endblock %}
