--- a/cadettracker/templates/cadettracker/regiment.html
+++ b/cadettracker/templates/cadettracker/regiment.html
@@ -22,7 +22,7 @@ Regiment: {{ regi.RegNum }}
   {% for item in co.companyneedssupply_set.all %}
     <li>{{ item }}</li>
 
-  <form method = 'post' action="{% url 'cadettracker:fulfillRequest' item.id %}">
+  <form method = 'POST' action="{% url 'cadettracker:fulfillRequest' item.id %}">
     {% csrf_token %}
     <div class = 'row'>
       <button type="submit">Fulfill Request</button>
