--- a/cadettracker/templates/cadettracker/base_generic.html
+++ b/cadettracker/templates/cadettracker/base_generic.html
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>Cadet Management</title>
+    <title>Cadet Supply Manager</title>
     <link rel="stylesheet"
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
@@ -23,9 +23,9 @@
           <a class="dropdown-item" href="{% url 'cadettracker:index' %}">
             Home
           </a>
-          <a class="dropdown-item" href="{% url 'cadettracker:index' %}">
+          <!--<a class="dropdown-item" href="{% url 'cadettracker:index' %}">
             Modify suppliessssssss
-          </a>
+          </a> -->
         </div>
       </div>
     </div>
