--- a/cadettracker/templates/cadettracker/index.html
+++ b/cadettracker/templates/cadettracker/index.html
@@ -3,6 +3,8 @@
 
 {% block company_content %}
 
+<body style="background-color:powderblue;">
+
 <h2>Company List</h2>
 
 {% if Company_list %} <!-- check if list is full or empty -->
