--- a/cadettracker/templates/cadettracker/modify.html
+++ b/cadettracker/templates/cadettracker/modify.html
@@ -1,6 +1,7 @@
 {% extends 'cadettracker/base_generic.html' %}
 
 {% block company_content %}
+<body style="background-color:powderblue;">
 
 <div style="text-align:center;">
   <p> When modifying the number available, use a negative number to subtract from the current total </p>
