added to request supplies

--- a/cadettracker/templates/cadettracker/company.html
+++ b/cadettracker/templates/cadettracker/company.html
@@ -21,7 +21,7 @@
 
 {% endfor %}
 <a class = "drowpdown-item" style = "font-size:150%;" href="{% url 'cadettracker:modifysupplies' Co.pk %}">Modify supplies</a>
-
+<a class = "drowpdown-item" style = "font-size:150%;" href="{% url 'cadettracker:requestsupplies' Co.pk %}">Request supplies</a>
 
 </ul>
 
