--- a/cadettracker/templates/cadettracker/delete.html
+++ b/cadettracker/templates/cadettracker/delete.html
@@ -1,10 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Request Fulfilled</title>
-</head>
-<body>
-Request Fulfilled!
-</body>
-</html>
+{% extends 'cadettracker/base_generic.html' %}
+
+{% block company_content %}
+
+<div style="text-align:center;">
+  <p> When modifying the number available, use a negative number to subtract from the current total </p>
+  <p> Can't find a new item? Please send up the CoC to have new items added </p>
+  <p> </p>
+    <p> </p>
+</div>
+
+<form method = 'post'>
+    {% csrf_token %}
+    {% for field in form %}
+    <div class = 'row'>
+      <div class = 'col-sm'>
+        <b>{{ field.label_tag }}</b>
+      </div>
+      <div class = 'col-sm'>
+        {{ field }}
+    </div>
+    {% endfor %}
+    </div>
+
+    <div></div>
+    <input type = 'submit' value = 'Submit' />
+</form>
+
+{% endblock %}
