--- a/cadettracker/templates/cadettracker/delete.html
+++ b/cadettracker/templates/cadettracker/delete.html
@@ -3,8 +3,8 @@
 {% block company_content %}
 
 <div style="text-align:center;">
-  <p> When modifying the number available, use a negative number to subtract from the current total </p>
-  <p> Can't find a new item? Please send up the CoC to have new items added </p>
+  <p> Please indicate in the fields your company, the item you need and how many, and the location you need them. </p>
+  <p> Can't find an item you need? Please send up the CoC to have new items added </p>
   <p> </p>
     <p> </p>
 </div>
